--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
             <!-- Section Title -->
             <div class="container section-title" data-aos="fade-up">
             <h2>COMPROMISO SOCIAL</h2>
-            <p><strong>Al servicio de la gente.</strong></p>
+            <p><strong>Conectando a la comunidad.</strong></p>
            </div><!-- End Section Title -->
       
             <div class="container">
@@ -706,7 +706,7 @@
 
     <!-- Texto -->
     <div style="flex: 2; min-width: 300px;">
-      <h4>Educación Digital Spy Net</h4>
+      <h4 style="text-align: center;">Educación Digital Spy Net</h4>
       <p><strong>Conectividad gratuita para el conocimiento del mañana.</strong> En Spy Net creemos que la educación es el motor del desarrollo. Por eso, implementamos el programa Educación Digital, a través del cual instalamos servicios de internet de forma gratuita en instituciones públicas educativas, sin costo mensual y con soporte técnico real.</p>
       <p>Este compromiso permite que escuelas, colegios y centros educativos accedan a una conexión estable y segura, promoviendo la inclusión digital, el acceso a contenido educativo y el desarrollo de habilidades del siglo XXI.</p>
       <ul>
@@ -820,42 +820,14 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/IMG-20250212-WA0025.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/fotocomp.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Ramón Matias Arias Ortiz</h4>
+                <h4>Robert Leckie</h4>
                 <p style="text-align: center;"> Técnico autorizado.</p>
-                <div class="social">
-                  <a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/IMG-20250317-WA0048.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Josue Ortiz</h4>
-                <p style="text-align: center;"> Jefe técnico Sapucai.</p>
-                <div class="social">
-                  <a href="https://www.facebook.com/share/16LzYAA4xb/"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/josue_ortiz98?igsh=cmloZ2R3a282encw"><i class="bi bi-instagram"></i></a>
-                </div>
-              </div>
-            </div>
-          </div><!-- End Team Member -->
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/1742728498030.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>Richard Leckie</h4>
-                <p style="text-align: center;"> Técnico autorizado.</p>
-                <div class="social">
-                  <a href="https://www.facebook.com/share/1AE6xqxNhd/"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/richardleckie69?igsh=MWxseHhhbnh3Zjl1aQ== "><i class="bi bi-instagram"></i></a>
-                </div>
+               <!-- <div class="social">-->
+                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
+                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
+                <!--</div>-->
               </div>
             </div>
           </div><!-- End Team Member -->
