--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/logo.png" rel="icon">
-  <link href="assets/img/logo.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon.png" rel="favicon">
+  <link href="assets/img/logo2.png" rel="logo2">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
