--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="favicon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/logo2.png" rel="logo2">
 
   <!-- Fonts -->
