--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -70,6 +71,7 @@
       <li><a href="#hero" class="active">Inicio</a></li>
       <li><a href="#about">Sobre SPYnet</a></li>
       <li><a href="#services">Servicios, precios y zonas con cobertura</a></li>
+      <li><a href="#planes">Planes Corporativos</a></li>
       <li><a href="#portfolio">Galería</a></li>
       <li><a href="#consorcio">Consorcio SPY</a></li>
       <li><a href="#kits">Promo kits de cámaras</a></li>
@@ -153,6 +155,10 @@
             <div class="carousel-item">
               <img src="assets/img/sapucai.jpg" class="d-block w-100 img-fluid" alt="Imagen 2">
             </div>
+            <div class="carousel-item">
+              <img src="assets/img/IMG-20250717-WA0054.jpg" class="d-block w-100 img-fluid" alt="Imagen 3">
+            </div>
+
           </div>
         </div>
       </div>
@@ -283,7 +289,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <p>Descubre cómo SPYnet puede transformar tu experiencia de conectividad. Únete a nuestra red y sé parte del futuro digital. </p>
-            <img src="assets/img/FB_IMG_1733609521821.jpg" alt="Imagen descriptiva" class="imagen-centrada">
+            <img src="assets/img/IMG-20250717-WA0051.jpg" alt="Imagen descriptiva" class="imagen-centrada">
 
 
             <div class="col-12 content" data-aos="fade-up" data-aos-delay="100">
@@ -360,7 +366,7 @@
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
               <div class="service-item position-relative">
                <!-- <div class="icon"><i class="bi bi-wifi icon"></i></div>-->
-                <img src="assets/img/IMG-20250402-WA0010.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">  
+                <img src="assets/img/FB_IMG_1733609521821.jpg" alt="Imagen descriptiva" style="width: 100%; margin-top: 15px;">  
                 
                 <div class="col-lg-7">
                   <!-- Enlace de WhatsApp -->
@@ -416,6 +422,136 @@
     </div>
   </div>
 
+</div>
+
+
+<!-- Services Section -->
+<section id="planes" class="services section light-background">
+
+  <!-- Section Title -->
+  <div class="container section-title" data-aos="fade-up">
+    <h2>PLANES CORPORATIVOS</h2>
+    <strong style="text-align: center;">Soluciones  Tecnologicas Integrales para Empresas y Hogares.</strong>
+    <p style="text-align: justify;">Contamos con planes corporativos diseñados para crecer contigo. Desde oficinas pequeñas hasta redes empresariales complejas, Spy Net te conecta con velocidad simétrica, asistencia real y soluciones que se adaptan a tu negocio.</p>
+  </div><!-- End Section Title -->
+
+  <div class="container">
+
+    <div class="row gy-4">
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div style="font-size: 2rem; color: #0d6efd;">
+         <i class="bi bi-camera-video"></i>
+         <i class="bi bi-tools"></i>
+      </div>
+          <h4>Instalación de Cámaras de Seguridad</h4>
+          <p>
+            Protegé lo que más importa con tecnología de vigilancia confiable.
+            Instalamos sistemas de cámaras HD y IP con monitoreo local y remoto. 
+            Adaptamos cada solución a tus necesidades: hogares, empresas, depósitos o comercios.
+            Visión nocturna, colorida  grabación continua y acceso desde tu celular.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+           <i class="bi bi-exclamation-triangle" style="font-size: 2rem; color: red;"></i>
+          </div>
+          <h4>Sistemas de Alarma Inteligente</h4>
+          <p>
+            Seguridad activa las 24 horas, todos los días.
+            Ofrecemos alarmas con sensores de movimiento, apertura, vibración y control remoto.
+            Integración con notificaciones vía app y posibilidad de conexión con centros de monitoreo.
+            Detección inmediata y respuesta rápida.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+          <i class="bi bi-fire" style="font-size: 2rem; color: red;"></i>
+          </div>
+          <h4>Prevención de Incendios</h4>
+          <p>
+            Protección que salva vidas y patrimonios.
+            Instalamos sistemas de detección de humo, calor y gases peligrosos. 
+            Asesoramos sobre rutas de evacuación, paneles de alerta y sistemas de extinción automática. 
+            Cumplimos con normativas locales y exigencias empresariales.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+          <i class="bi bi-diagram-3"></i>
+          </div>
+          <h4>Red Estructurada</h4>
+          <p>
+            Organización, velocidad y eficiencia en tu red interna.
+            Diseñamos e instalamos redes físicas con cableado estructurado, racks, patch panels y
+            puntos de acceso distribuidos. Soluciones para oficinas, edificios o espacios industriales. 
+            Todo pensado para un flujo de datos seguro y estable.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+          <i class="bi bi-globe2"></i>
+          </div>
+          <h4>Trabajos con Fibra Óptica</h4>
+          <p>
+            Conexiones que impulsan el futuro.
+            Realizamos tendido, fusión y certificación de enlaces de fibra óptica para empresas, instituciones y 
+            urbanizaciones. Alta capacidad, baja latencia y máxima precisión en cada conexión. Ideal para proveedores, 
+            cámaras de vigilancia o enlaces punto a punto.
+          </p>
+        </div>
+      </div>
+
+
+      <div class="col-12 d-flex" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative text-center">
+          <div class="icon">
+          <i class="fas fa-satellite-dish"></i>
+          </div>
+          <h4>Instalación de Starlink en Paraguay</h4>
+          <p>
+            En Spy Net, llevamos el futuro a cada rincón del país.
+            Somos pioneros en la instalación de Starlink, el innovador servicio de 
+            internet satelital de alta velocidad. Conectamos zonas rurales, empresas remotas 
+            y proyectos exigentes que necesitan conectividad sin límites.
+          </p>
+          <ul>
+              <li><i class="bi bi-check2-circle"></i> <span style="text-align: justify;">Configuración profesional del kit Starlink.</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span style="text-align: justify;">Asistencia personalizada en cada etapa.</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span style="text-align: justify;">Cobertura nacional para clientes empresariales y particulares.</span></li>
+              <li><i class="bi bi-check2-circle"></i> <span style="text-align: justify;">Integración con redes locales y soluciones híbridas.</span></li>
+            </ul>
+            <span>Conectá tu mundo donde antes no era posible.</span>
+        </div>
+      </div>
+
+  <div class="col-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="150">
+  <div class="service-item position-relative text-center" style="width: 100%;">
+    <h4 style="margin-bottom: 10px;">Mirá nuestras soluciones en acción</h4>
+    
+    <video controls width="100%" style="max-width: 600px; border-radius: 15px; 
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
+      border: 4px solid #0d6efd;">
+      <source src="assets/video/VID-20241113-WA0098.mp4" type="video/mp4">
+      Tu navegador no soporta el video HTML5.
+    </video>
+
+    <p style="margin-top: 10px; font-style: italic; color: #555;">Tecnología real, resultados visibles.</p>
+  </div>
 </div>
 
 
@@ -848,6 +984,36 @@
             </div>
           </div><!-- End Team Member -->
 
+           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/1752786746085.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Néstor Villalba</h4>
+                <p style="text-align: center;"> Técnico autorizado.</p>
+               <!-- <div class="social">-->
+                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
+                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
+                <!--</div>-->
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/1752786366921.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Víctor Bobadilla</h4>
+                <p style="text-align: center;"> Técnico autorizado.</p>
+               <!-- <div class="social">-->
+                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
+                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
+                <!--</div>-->
+              </div>
+            </div>
+          </div><!-- End Team Member -->
+
+
         </div>
 
       </div>
@@ -921,7 +1087,6 @@
   </div>
 
 </section><!-- End Testimonios Section -->
-
 
 
 <!-- Services Section -->
