--- a/index.html
+++ b/index.html
@@ -959,6 +959,7 @@
               <div class="pic"><img src="assets/img/team/IMG-20250317-WA0048.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Josu Ortiz</h4>
+                <span>Ing. Ambiental</span>
                 <p style="text-align: center;"> Jefe técnico Sapucai.</p>
                 <div class="social">
                   
