--- a/index.html
+++ b/index.html
@@ -959,8 +959,7 @@
               <div class="pic"><img src="assets/img/team/IMG-20250317-WA0048.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Josu Ortiz</h4>
-                <span>Ing. Ambiental</span>
-                <p style="text-align: center;"> Jefe técnico Sapucai.</p>
+                <span>Ing. Jefe Técnico Sapucai.</span>
                 <div class="social">
                   
                   <a href="https://www.facebook.com/share/16LzYAA4xb/"><i class="bi bi-facebook"></i></a>
