--- a/index.html
+++ b/index.html
@@ -386,42 +386,38 @@
 <!-- Mapa de Cobertura -->
 <div class="row gy-4 mt-5">
 
-  <!-- Mapa de Valenzuela -->
+ <!-- Mapa de Valenzuela -->
   <div class="col-md-6">
     <h4 class="text-center">Cobertura en Valenzuela</h4>
     <div class="map-responsive" style="border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.15);">
       <iframe 
-        src="https://www.google.com/maps/d/embed?mid=1sdAqF3KXQoa_DNfSsTitRS3n3FhT4qI&hl=es&ehbc=2E312F&noprof=1"
-        width="100%" height="300"
-        style="border:0;"
-        allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
+      src="https://www.google.com/maps/d/u/1/embed?mid=1P__hCEGi3G7TbXgWcR6jlBwTHrBz7Ow&ehbc=2E312F&noprof=1"
+      width="100%" height="300"
+      style="border:0;"
+      allowfullscreen="" loading="lazy">
+    </iframe>
     </div>
     <p class="text-center mt-2">Zonas: San Francisco, Centro, Curupayty, Piraretã, Minas Cué, Compañía Mariscal López.</p>
     <div class="text-center">
-      <a href="https://www.google.com/maps/d/viewer?mid=1sdAqF3KXQoa_DNfSsTitRS3n3FhT4qI&hl=es&usp=sharing" target="_blank" class="btn btn-outline-primary btn-sm mt-2">Ver en Google Maps</a>
+      <a href="https://www.google.com/maps/d/u/1/edit?mid=1P__hCEGi3G7TbXgWcR6jlBwTHrBz7Ow&usp=sharing" target="_blank" class="btn btn-outline-primary btn-sm mt-2">Ver en Google Maps</a>
     </div>
   </div>
-
   <!-- Mapa de Sapucai -->
-  <div class="col-md-6">
-    <h4 class="text-center">Cobertura en Sapucai</h4>
-    <div class="map-responsive" style="border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.15);">
-      <iframe 
-        src="https://www.google.com/maps/d/embed?mid=1b_YNMzYim5SuApNBrqUzkL1il03BIw4&ehbc=2E312F&noprof=1"
-        width="100%" height="300"
-        style="border:0;"
-        allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-    </div>
-    <p class="text-center mt-2">Zonas: Cerro Rokẽ, Arroyo Porã, Sapucai Centro.</p>
-    <div class="text-center">
-      <a href="https://www.google.com/maps/d/viewer?mid=1b_YNMzYim5SuApNBrqUzkL1il03BIw4&hl=es&usp=sharing" target="_blank" class="btn btn-outline-success btn-sm mt-2">Ver en Google Maps</a>
-    </div>
+<div class="col-md-6">
+  <h4 class="text-center">Cobertura en Sapucai</h4>
+  <div class="map-responsive" style="border-radius: 10px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.15);">
+    <iframe 
+      src="https://www.google.com/maps/d/u/1/embed?mid=1dvUhn4zdSOIY-dfsnd7sqvrNSUbUtQA&ehbc=2E312F&noprof=1"
+      width="100%" height="300"
+      style="border:0;"
+      allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </div>
-
+  <p class="text-center mt-2">Zonas: Cerro Rokẽ, Arroyo Porã, Sapucai Centro.</p>
+  <div class="text-center">
+    <a href="https://www.google.com/maps/d/u/1/edit?mid=1dvUhn4zdSOIY-dfsnd7sqvrNSUbUtQA&usp=sharing" target="_blank" class="btn btn-outline-success btn-sm mt-2">Ver en Google Maps</a>
+  </div>
 </div>
 
 
@@ -976,10 +972,10 @@
               <div class="member-info">
                 <h4>Robert Leckie</h4>
                 <p style="text-align: center;"> Técnico autorizado.</p>
-               <!-- <div class="social">-->
-                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
-                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
-                <!--</div>-->
+               <div class="social">
+                  <a href="https://www.facebook.com/share/15mPJLfoG6/?mibextid=qi2Omg"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/alexsander_espinola?igsh=YmxjMGJ0d2Zla2d1"><i class="bi bi-instagram"></i></a>
+                </div>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -990,10 +986,10 @@
               <div class="member-info">
                 <h4>Néstor Villalba</h4>
                 <p style="text-align: center;"> Técnico autorizado.</p>
-               <!-- <div class="social">-->
-                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
-                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
-                <!--</div>-->
+               <div class="social">
+                  <a href="https://www.facebook.com/share/1F9x4YwXSq/?mibextid=qi2Omg"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/nestorvillalbaortiz?igsh=MWpiODhxenZtcjZxNw=="><i class="bi bi-instagram"></i></a>
+                </div>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -1005,10 +1001,10 @@
               <div class="member-info">
                 <h4>Víctor Bobadilla</h4>
                 <p style="text-align: center;"> Técnico autorizado.</p>
-               <!-- <div class="social">-->
-                  <!--<a href="https://www.facebook.com/share/1A6SQGjZG2/"><i class="bi bi-facebook"></i></a>-->
-                  <!--<a href="https://www.instagram.com/ramonmatiasariasortiz?utm_source=qr&igsh=ZWF6b2FmcGhm5w"><i class="bi bi-instagram"></i></a>-->
-                <!--</div>-->
+               <div class="social">
+                  <a href="https://www.facebook.com/share/17B9LKwQk6/?mibextid=qi2Omg"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/_victordbc05?igsh=MTN5YjBmNjFmZmNlaQ=="><i class="bi bi-instagram"></i></a>
+                </div>
               </div>
             </div>
           </div><!-- End Team Member -->
